src/objects/Opportunity.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisory Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregate_GS_FTE_in__c</fullName>
        <label>Aggregate GS FTE in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Minus_Expense_Income__c</fullName>
        <description>Total Amount of Agreement minus Pass Through Amount</description>
        <formula>Amount - Expense_Income__c -  Interdivision_Expense_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Agreement minus Pass Through Amount</inlineHelpText>
        <label>Amount Minus Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture and Food Security</fullName>
                </value>
                <value>
                    <fullName>Economic Development</fullName>
                </value>
                <value>
                    <fullName>Education and Training</fullName>
                </value>
                <value>
                    <fullName>Emergency Response</fullName>
                </value>
                <value>
                    <fullName>Financial Services for the Poor</fullName>
                </value>
                <value>
                    <fullName>Gender Equality and Women&apos;s Empowerment</fullName>
                </value>
                <value>
                    <fullName>Governance and Accountability</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Water, Sanitation, &amp; Hygiene</fullName>
                </value>
                <value>
                    <fullName>Legal, Human Rights</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attempted_Longer_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track if BD team member presented the initial budget with at least 24 Months of product.</description>
        <inlineHelpText>Used to track if BD team member presented the initial budget with at least 24 Months of product.</inlineHelpText>
        <label>Attempted Longer Product Subs (&gt;24 mths)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buffer_Amount__c</fullName>
        <description>Expected Buffer % * Amount minus Expense</description>
        <formula>Expected_Buffer__c * Amount_Minus_Expense_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Buffer % * Amount minus Expense</inlineHelpText>
        <label>Buffer Amount ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buffer_EV__c</fullName>
        <description>Expected Buffer % * EV minus Expense Income</description>
        <formula>Expected_Buffer__c *  Expected_Value_Minus_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Buffer % * EV minus Expense Income</inlineHelpText>
        <label>Buffer EV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Owner_Name__c</fullName>
        <formula>Business_Unit_Owner__r.FirstName + &apos; &apos; +  Business_Unit_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who owns the Biz Dev process for this business unit.</inlineHelpText>
        <label>Business Unit Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_EV_MRR__c</fullName>
        <formula>Calculated_Probability__c * Monthly_Recurring_Revenue_MRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated EV MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Probability__c</fullName>
        <formula>IF( Opps_Age__c &lt; 30,  
IF( ISPICKVAL(StageName,&quot;Stage 3 - Prospect&quot;), 0.41, 
IF( ISPICKVAL(StageName,&quot;Stage 4 - Proposal Development&quot;), 0.76,
IF( ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;), 0.93, 
IF( ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;), 0.99,
IF( ISPICKVAL(StageName, &quot;Closed - Won&quot;), 1,0))))),
IF( Opps_Age__c &lt; 60, 
IF( ISPICKVAL(StageName,&quot;Stage 3 - Prospect&quot;), 0.19, 
IF( ISPICKVAL(StageName,&quot;Stage 4 - Proposal Development&quot;), 0.40,
IF( ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;), 0.89, 
IF( ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;), 0.99,
IF( ISPICKVAL(StageName, &quot;Closed - Won&quot;), 1,0))))),
IF( Opps_Age__c &lt; 90, 
IF( ISPICKVAL(StageName,&quot;Stage 3 - Prospect&quot;), 0.19 , 
IF( ISPICKVAL(StageName,&quot;Stage 4 - Proposal Development&quot;), 0.31,
IF( ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;), 0.80, 
IF( ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;), 0.99,
IF( ISPICKVAL(StageName, &quot;Closed - Won&quot;), 1,0))))),
IF( Opps_Age__c &lt; 120, 
IF( ISPICKVAL(StageName,&quot;Stage 3 - Prospect&quot;), 0.16, 
IF( ISPICKVAL(StageName,&quot;Stage 4 - Proposal Development&quot;), 0.24,
IF( ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;), 0.71, 
IF( ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;), 0.83,
IF( ISPICKVAL(StageName, &quot;Closed - Won&quot;), 1,0))))),
IF( ISPICKVAL(StageName,&quot;Stage 3 - Prospect&quot;), 0.14 , 
IF( ISPICKVAL(StageName,&quot;Stage 4 - Proposal Development&quot;), 0.22,
IF( ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;), 0.71, 
IF( ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;), 0.83,
IF( ISPICKVAL(StageName, &quot;Closed - Won&quot;), 1,0)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Probability %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Response__c</fullName>
        <description>What Channel is the Opportunity (Sales, B2B, Pre-Bid, Other Competitive Bid, etc.)? 
See https://confluence.dimagi.com/display/BD/BD+Channels</description>
        <inlineHelpText>What Channel is the Opportunity (Sales, B2B, Pre-Bid, Other Competitive Bid, etc.)? 
See https://confluence.dimagi.com/display/BD/BD+Channels</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>B2B - Standard</fullName>
                </value>
                <value>
                    <fullName>B2B - Enterprise</fullName>
                </value>
                <value>
                    <fullName>Large Competitive Bid</fullName>
                </value>
                <value>
                    <fullName>Other Competitive Bid</fullName>
                </value>
                <value>
                    <fullName>NIH Prime Grant</fullName>
                </value>
                <value>
                    <fullName>CORE Funding (Gates)</fullName>
                </value>
                <value>
                    <fullName>Gates Enterprise</fullName>
                </value>
                <value>
                    <fullName>Chatbot</fullName>
                </value>
                <value>
                    <fullName>Always Exclude Reporting Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>closed_lost_reason_detail__c</fullName>
        <description>Closed reason - more details.</description>
        <inlineHelpText>Closed reason - more details.</inlineHelpText>
        <label>Closed Reason - Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_lost_reason__c</fullName>
        <description>Enter the reason this opp was closed.</description>
        <inlineHelpText>Enter the reason this opp was closed.</inlineHelpText>
        <label>Closed reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOST - Lack of GS Capacity (or feasible timelines)</fullName>
                    <label>No Go / LOST - Lack of GS Capacity (or feasible timelines)</label>
                </value>
                <value>
                    <fullName>No Go - Went Self Service (SaaS)</fullName>
                </value>
                <value>
                    <fullName>No Go / LOST - Prime Lost bid</fullName>
                </value>
                <value>
                    <fullName>No Go / LOST - Prime dropped bid</fullName>
                    <label>No Go / LOST - Prime didn&apos;t pursue bid</label>
                </value>
                <value>
                    <fullName>No Go / LOST - Prime won but removed Dimagi</fullName>
                </value>
                <value>
                    <fullName>No Go / LOST - Entire Bid was Cancelled</fullName>
                </value>
                <value>
                    <fullName>LOST - Competition</fullName>
                </value>
                <value>
                    <fullName>LOST - Authority</fullName>
                </value>
                <value>
                    <fullName>LOST - Didn&apos;t need a tool like CommCare</fullName>
                </value>
                <value>
                    <fullName>LOST - Lost proposal</fullName>
                </value>
                <value>
                    <fullName>LOST - No need for paid features</fullName>
                </value>
                <value>
                    <fullName>LOST - Other</fullName>
                </value>
                <value>
                    <fullName>LOST - Price</fullName>
                </value>
                <value>
                    <fullName>LOST - Stopped responding</fullName>
                </value>
                <value>
                    <fullName>LOST - Timing</fullName>
                    <label>LOST - Timing (Client)</label>
                </value>
                <value>
                    <fullName>LOST - Stop of funding source</fullName>
                </value>
                <value>
                    <fullName>LOST - End of project</fullName>
                </value>
                <value>
                    <fullName>LOST - Renewed into a new implementation contract</fullName>
                </value>
                <value>
                    <fullName>LOST - Had to hand-off to BD</fullName>
                </value>
                <value>
                    <fullName>WON - Features</fullName>
                </value>
                <value>
                    <fullName>WON - Had extra funding</fullName>
                </value>
                <value>
                    <fullName>WON - Intention to scale</fullName>
                </value>
                <value>
                    <fullName>WON - Server</fullName>
                </value>
                <value>
                    <fullName>WON - Support</fullName>
                </value>
                <value>
                    <fullName>WON - Other</fullName>
                </value>
                <value>
                    <fullName>No Go - Didn&apos;t pursue after Go/No Go Process</fullName>
                </value>
                <value>
                    <fullName>LOST - Never got on a follow-up call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closer_in_exploratory_call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if a closer was brought in on a high-quality exploratory call.</description>
        <label>Closer on exploratory call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Clauses_for_PM__c</fullName>
        <description>Requested by Corporate Ops, April 2023.
Intended as a place for Corporate Ops to document any key clauses such that Project Managers can view them.</description>
        <inlineHelpText>Captures the key clauses that the PM needs to be aware of; populated by Corporate Operations.</inlineHelpText>
        <label>Contract Clauses for PM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Owner_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which Dimagi Subsidiary or registered Entity will sign the contract.</inlineHelpText>
        <label>Contract Owner (Entity)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
            <filterItems>
                <field>Business_Unit__c.Name</field>
                <operation>equals</operation>
                <value>INC</value>
            </filterItems>
            <filterItems>
                <field>Business_Unit__c.Name</field>
                <operation>equals</operation>
                <value>DSA</value>
            </filterItems>
            <filterItems>
                <field>Business_Unit__c.Name</field>
                <operation>equals</operation>
                <value>DSI</value>
            </filterItems>
            <filterItems>
                <field>Business_Unit__c.Name</field>
                <operation>equals</operation>
                <value>DWA</value>
            </filterItems>
            <filterItems>
                <field>Business_Unit__c.Name</field>
                <operation>equals</operation>
                <value>Inc</value>
            </filterItems>
            <infoMessage>Only Inc, DSA, DSI, or (very infrequently DWA) can own a contract.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Opportunities (Contract Owner)</relationshipLabel>
        <relationshipName>OpportunitiesContractOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FFP</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_to_Stage_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if an ABS opp converts to a Stage 3 opportunity</description>
        <label>Converted to Stage 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Lead</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Opportunities (Cost Lead)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Name</formula>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <inlineHelpText>Text field to display attached Countries for reporting. Populated automatically when you add a location.</inlineHelpText>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>What country is this opportunity taking place.</inlineHelpText>
        <label>Implementing Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Converted_to_Stage_3__c</fullName>
        <description>Mark this date when an ABS opp get converted to Stage 3</description>
        <label>Date Converted to Stage 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_self_service_subscription_starts__c</fullName>
        <description>To be filled in by CS once the paying subscription associated with this won Opp has started (if start date is in the future)
To be filled in by closers if they know the start date of the paying subscriptions associated with this opp but the domain is not known yet and the subscription can&apos;t be created yet</description>
        <inlineHelpText>To be filled in by CS once the paying subscription associated with this won Opp has started (if start date is in the future)
To be filled in by closers if they know the start date of the paying subscriptions associated with this opp but the domain is</inlineHelpText>
        <label>Date self-service subscription starts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DA_Expected_MRR__c</fullName>
        <description>This field calculates expected MRR for Digital Adherence opportunities based on MRR amount and percent probability</description>
        <formula>DA_Monthly_Recurring_Revenue_MRR__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates expected MRR for Digital Adherence opportunities based on MRR amount and percent probability</inlineHelpText>
        <label>DA Expected MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Monthly_Recurring_Revenue_MRR__c</fullName>
        <description>Monthly Recurring Revenue (MRR) amount for Digital Adherence Opportunities</description>
        <inlineHelpText>Monthly Recurring Revenue (MRR) amount for Digital Adherence Opportunities</inlineHelpText>
        <label>DA Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Region__c</fullName>
        <label>DA - Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deadline_for_Submitting_Proposal__c</fullName>
        <inlineHelpText>Internal deadline for review ready.</inlineHelpText>
        <label>Deadline for Submitting Proposal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Adherence_Sector__c</fullName>
        <label>Digital Adherence Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TB</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>looks up the project space name from the Domain object</description>
        <inlineHelpText>DO NOT USE (CJ/AS TEST)</inlineHelpText>
        <label>Domain Name</label>
        <referenceTo>Domain__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>This is the due date of the proposal/grant/award submission.</description>
        <inlineHelpText>Due date of the opp&apos;s proposal/grant/award submission, if relevant.</inlineHelpText>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_months__c</fullName>
        <inlineHelpText>How long would this contract be spread over if we win?</inlineHelpText>
        <label>Duration (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Date_1_Minus_Expense_Income__c</fullName>
        <formula>if(BLANKVALUE(Duration_months__c,0) = 0,
0,
if(CloseDate &gt; $Setup.Expected_Value__c.EV_Date_1__c,
0,
if((CloseDate + (30*Duration_months__c)) &lt; $Setup.Expected_Value__c.EV_Date_1__c,
  Expected_Value_Minus_Income__c ,
(   Expected_Value_Minus_Income__c  * ($Setup.Expected_Value__c.EV_Date_1__c -  CloseDate ) / (30 * Duration_months__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EV Date 1 Minus Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Date_1__c</fullName>
        <formula>if(BLANKVALUE(Duration_months__c,0) = 0,
0,
if(CloseDate &gt; $Setup.Expected_Value__c.EV_Date_1__c,
0,
if((CloseDate + (30*Duration_months__c)) &lt; $Setup.Expected_Value__c.EV_Date_1__c,
 Expected_Value__c,
(  Expected_Value__c * ($Setup.Expected_Value__c.EV_Date_1__c -  CloseDate ) / (30 * Duration_months__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EV Date 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclusive_Teaming_Agreement__c</fullName>
        <label>Teaming Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Not signed, likely exclusive</fullName>
                </value>
                <value>
                    <fullName>Not signed, likely non-exclusive</fullName>
                </value>
                <value>
                    <fullName>Signed, exclusive</fullName>
                </value>
                <value>
                    <fullName>Signed, non-exclusive</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusivity_Agreement_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do we have an exclusivity Teaming Agreement on this opportunity?</description>
        <inlineHelpText>Do we have an exclusivity Teaming Agreement on this opportunity?</inlineHelpText>
        <label>Exclusivity Agreement? (Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_FTE_Estimate__c</fullName>
        <description>Execution EV / 120,000 (Efficiency Assumption) / Duration</description>
        <formula>Services_EV__c /  120000 / (Duration_months__c /12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Execution EV / 120,000 (Efficiency Assumption) / Duration</inlineHelpText>
        <label>Execution FTE Estimate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_Owner_Division__c</fullName>
        <description>This fields describes which division would execute the delivery of this opportunity after it is contracted</description>
        <inlineHelpText>This fields describes which division would execute the delivery of this opportunity after it is contracted</inlineHelpText>
        <label>Execution Owner (Division)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>GSO</fullName>
                </value>
                <value>
                    <fullName>GTD</fullName>
                </value>
                <value>
                    <fullName>India Division</fullName>
                </value>
                <value>
                    <fullName>USH</fullName>
                </value>
                <value>
                    <fullName>ICDS-CAS</fullName>
                    <isActive>false</isActive>
                    <label>ICDS-CAS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Owner_Practice__c</fullName>
        <description>This fields describes which sub-division or Practice would execute the delivery of this opportunity after it is contracted</description>
        <inlineHelpText>This fields describes which sub-division or Practice would execute the delivery of this opportunity after it is contracted</inlineHelpText>
        <label>Execution Owner (Sub-Division)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GSO - BizOps</fullName>
                </value>
                <value>
                    <fullName>GSO - BizStrat</fullName>
                </value>
                <value>
                    <fullName>GSO - CC Connect</fullName>
                </value>
                <value>
                    <fullName>GSO - Dgtl Adherence</fullName>
                </value>
                <value>
                    <fullName>GSO - Leadership</fullName>
                </value>
                <value>
                    <fullName>GSO - Marketing</fullName>
                </value>
                <value>
                    <fullName>GSO - OoCEO</fullName>
                </value>
                <value>
                    <fullName>GSO - POps</fullName>
                </value>
                <value>
                    <fullName>GSO - RAD</fullName>
                </value>
                <value>
                    <fullName>GTD - Eng Management</fullName>
                </value>
                <value>
                    <fullName>GTD - Leadership</fullName>
                </value>
                <value>
                    <fullName>GTD - QA</fullName>
                </value>
                <value>
                    <fullName>GTD - Team</fullName>
                </value>
                <value>
                    <fullName>India - Delivery</fullName>
                </value>
                <value>
                    <fullName>India - Leadership</fullName>
                </value>
                <value>
                    <fullName>India - Partnerships</fullName>
                </value>
                <value>
                    <fullName>India - Tech</fullName>
                </value>
                <value>
                    <fullName>SaaS - CS</fullName>
                </value>
                <value>
                    <fullName>SaaS - Management</fullName>
                </value>
                <value>
                    <fullName>SaaS - Marketing</fullName>
                </value>
                <value>
                    <fullName>SaaS - Operations</fullName>
                </value>
                <value>
                    <fullName>SaaS - Platform</fullName>
                </value>
                <value>
                    <fullName>SaaS - Product</fullName>
                </value>
                <value>
                    <fullName>SaaS - Sales</fullName>
                </value>
                <value>
                    <fullName>SaaS - Support</fullName>
                </value>
                <value>
                    <fullName>Sol - Delivery</fullName>
                </value>
                <value>
                    <fullName>Sol - Leadership</fullName>
                </value>
                <value>
                    <fullName>Sol - Partnerships</fullName>
                </value>
                <value>
                    <fullName>Sol - Tech</fullName>
                </value>
                <value>
                    <fullName>USH - Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>executive_sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this opportunity has innovation or strategic value not well captured through other impact, team, or profit metrics, it requires an executive sponsor.</inlineHelpText>
        <label>Executive Sponsor</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Opportunities (Executive Sponsor)</relationshipLabel>
        <relationshipName>opportunity_sponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Buffer__c</fullName>
        <description>Percent of the Total Contract minus Expenses that will not be directly allocated via Fogbugz or Intacct data, and is expected to fund other core activities.</description>
        <inlineHelpText>Percent of the Total Contract minus Expenses that will not be directly allocated via Fogbugz or Intacct data, and is expected to fund other core activities.</inlineHelpText>
        <label>Expected Buffer (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Monthly_Recurring_Revenue_MRR__c</fullName>
        <description>Probability * MRR. This is only calculated for Implementation Type = Self Service, Managed Server, or Enterprise.</description>
        <formula>IF ( OR(ISPICKVAL(Implementation_Type__c, &quot;Self Service&quot; ),ISPICKVAL(Implementation_Type__c, &quot;Enterprise&quot;),ISPICKVAL(Implementation_Type__c, &quot;Managed Server&quot; ) ),
          IF ( OR ( ISBLANK ( Amount ), ISBLANK ( Duration_months__c ) ),
               NULL,
                Monthly_Recurring_Revenue_MRR__c  *  Fogbugz_Probability__c  
             ),
          NULL
        )</formula>
        <inlineHelpText>Probability * MRR. This is only calculated for Implementation Type = Self Service, Managed Server, or Enterprise.</inlineHelpText>
        <label>Expected Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Value_Minus_Income__c</fullName>
        <formula>Amount_Minus_Expense_Income__c  * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Value Minus Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <formula>Amount * Probability</formula>
        <label>Expected Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Income__c</fullName>
        <description>The amount ($) of the total contract amount that will go to external expenses (travel, vendors, or Subcontracts), and are &quot;pass through&quot; from Dimagi to other parties (and therefore we shouldn&apos;t count toward Dimagi&apos;s EV).</description>
        <inlineHelpText>The amount ($) of the total contract amount that will go to external expenses (travel, vendors, or Subcontracts), and are &quot;pass through&quot; from Dimagi to other parties (and therefore we shouldn&apos;t count toward Dimagi&apos;s EV).</inlineHelpText>
        <label>External Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>